backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: app
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
        ports:
         - containerPort: 8080
        

---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: app
spec:  
  selector:
    app: backend
  ports:
  - protocol: TCP
    name: multitool
    port: 8080
    targetPort: 8080
