frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: app
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
        ports:
         - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: app
spec:  
  selector:
    app: frontend
  ports:
  - protocol: TCP
    name: multitool
    port: 8080
    targetPort: 8080
