access-backend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-backend
  namespace: app
spec:
  podSelector:
    matchLabels:
      app: backend
  policyTypes:
  - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: frontend 
  # podSelector:
  #   matchLabels:
  #     app: cache  
  # policyTypes:
  # - Ingress    
  # ingress:
  #   - from:
  #     - podSelector:
  #         matchLabels:
  #           app: backend
