access-cache.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-cache
  namespace: app
spec:
  podSelector:
    matchLabels:
      app: cache  
  policyTypes:
  - Ingress    
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: backend
